--- a/chrome/extension/app/styles/popup.sass
+++ b/chrome/extension/app/styles/popup.sass
@@ -20,3 +20,5 @@ details
     font-size: $baseFontSize * .85
   .btn-group
     margin-bottom: 10px
+  form[name=sendMsgForm]
+    margin-bottom: 3px
