code + style improvements, add option button
move application-wide logic from popup.js into app.js

--- a/chrome/extension/src/styles/main.css
+++ b/chrome/extension/src/styles/main.css
@@ -6862,3 +6862,13 @@ ul.options li {
 details.advanced {
   margin-top: 15px;
 }
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/_pants\/Code\/UProxy\/chrome\/extension\/src\/styles\/main\.sass}line{font-family:\000038}}
+#popup .topnav {
+  text-align: right;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/_pants\/Code\/UProxy\/chrome\/extension\/src\/styles\/main\.sass}line{font-family:\0000311}}
+.large-font {
+  font-size: 21px;
+}
