--- a/chrome/extension/src/styles/main.sass
+++ b/chrome/extension/src/styles/main.sass
@@ -5,6 +5,11 @@
   min-width: 357px
   overflow-x: hidden
   padding: 15px
+  .topnav
+    text-align: right
+
+.large-font
+  font-size: $baseFontSize * 1.5
 
 details
   & > summary
