--- a/chrome/extension/src/styles/main.sass
+++ b/chrome/extension/src/styles/main.sass
@@ -5,8 +5,12 @@
   min-width: 357px
   overflow-x: hidden
   padding: 15px
-  .topnav
+  .footer
     text-align: right
+
+.roster ul
+  max-height: 150px
+  overflow: scroll
 
 .large-font
   font-size: $baseFontSize * 1.5
