--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -20,6 +20,14 @@ ul {
   list-style: none;
   padding: 0; }
 
+.btn {
+  border: 1px solid black;
+  background: white; }
+
+.btn-request {
+  position: absolute;
+  right: 0; }
+
 .title {
   padding: 0 8px; }
 
@@ -36,6 +44,9 @@ ul {
 #options:hover {
   opacity: 0.8; }
 
+#search-section {
+  position: relative; }
+
 #search-contacts {
   width: 100%;
   padding: 8px 20px;
@@ -48,14 +59,38 @@ ul {
   outline: none;
   box-shadow: 0 1px 1px #cccccc; }
 
+#search-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 35px;
+  height: 35px;
+  padding: 4px;
+  border: none;
+  background: transparent url("../icons/search.png") no-repeat center;
+  background-size: 80%; }
+
+#search-btn:hover, #search-btn:focus {
+  opacity: 0.5;
+  outline: none; }
+
 #filters {
+  position: relative;
+  display: block;
+  width: 100%;
   border-top: 1px solid #aaaaaa; }
 
-.btn {
-  border: 1px solid black;
-  background: white; }
+.filter {
+  background-color: white;
+  margin: 0;
+  padding: 8px 20px;
+  width: 50%; }
 
-.btn-request {
+#my-access {
+  position: absolute;
+  left: 0; }
+
+#friends-access {
   position: absolute;
   right: 0; }
 
@@ -73,16 +108,22 @@ ul {
 
 .contacts li {
   position: relative;
+  z-index: 0;
   cursor: default;
-  padding: 8px 24px;
+  padding: 6px 20px;
+  white-space: nowrap;
   -webkit-transition: all 0.23s !important;
   -moz-transition: all 0.23s !important;
   -o-transition: all 0.23s !important;
   transition: all 0.23s !important; }
 
 .contacts li:hover {
-  box-shadow: 0 1px 1px #cccccc;
-  top: -2px; }
+  z-index: 50;
+  top: -2px;
+  box-shadow: 0 1px 3px #aaaaaa; }
+
+.contact-details {
+  display: none; }
 
 #popup {
   min-width: 357px; }
