--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -12,9 +12,6 @@ $fontSize: 10px
   -o-transition: all 0.23s !important
   transition: all 0.23s !important
 
-html
-  height: 600px
-
 body
   font-family: Eurostile, sans-serif
   height: 100%
@@ -30,6 +27,26 @@ ul
   list-style: none
   padding: 0
 
+::-webkit-scrollbar
+  width: 6px
+
+::-webkit-scrollbar:hover
+  width: 10px
+
+::-webkit-scrollbar-track
+  background-color: #fafafa
+
+::-webkit-scrollbar-track:window-inactive
+  background-color: #000
+
+::-webkit-scrollbar-thumb
+  background-color: #aaa
+  height: 10%
+
+::-webkit-scrollbar-thumb:hover
+  background-color: #ccc
+
+
 .btn
   border: 1px solid #000
   background: #fff
@@ -43,7 +60,7 @@ ul
 .title
   padding: 0 8px
 
-#options
+#options-btn
   position: absolute
   top: 0
   right: 0
@@ -53,7 +70,7 @@ ul
   padding: 4px
   text-decoration: none
 
-#options:hover
+#options-btn:hover
   opacity: 0.8
 
 #search-section
@@ -107,15 +124,16 @@ ul
   right: 0
 
 .contacts
+  position: relative
   height: 400px
   overflow: auto
-  position: relative
   margin: 0
   padding: 0
   border-top: 1px solid #eee
   @include smooth
 
 .contacts li
+  background-color: #fdfdfd
   position: relative
   z-index: 0
   cursor: default
@@ -124,15 +142,19 @@ ul
   @include smooth
 
 .contacts li:hover
+  background-color: #fff
   z-index: 50
-  top: -2px
-  box-shadow: 0 1px 3px #aaa
+  top: -1px
+  box-shadow: 0 1px 2px #aaa
 
 .contact-details
+
+.contact-actions
   display: none
 
 #popup
   min-width: 357px
+  height: 600px
   .footer
     text-align: right
 
