--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -140,6 +140,21 @@ ul {
   top: -1px;
   box-shadow: 0 1px 2px #aaaaaa; }
 
+.contact-details {
+  height: 200px;
+  opacity: 1;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+
+.contact-details.ng-hide {
+  display: block !important;
+  opacity: 0;
+  height: 0;
+  z-index: -500;
+  pointer-events: none; }
+
 .contact-actions {
   display: none; }
 
