--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -12,12 +12,19 @@ $fontSize: 10px
   -o-transition: all 0.23s !important
   transition: all 0.23s !important
 
+@mixin smooth-slow
+  -webkit-transition: all 0.5s !important
+  -moz-transition: all 0.5s !important
+  -o-transition: all 0.5s !important
+  transition: all 0.5s !important
+
 body
   font-family: Eurostile, sans-serif
   height: 100%
   margin: 0
   padding: 0
   overflow: hidden
+  // background-color: #222
 
 h1, h2, h3, h4, h5
   margin: 0
@@ -56,6 +63,7 @@ ul
   right: 0
 
 #header
+  padding: 4px 16px
 
 .title
   padding: 0 8px
@@ -75,18 +83,25 @@ ul
 
 #search-section
   position: relative
+  background-color: #000
+  z-index: 50
 
 #search-contacts
-  width: 100%
+  width: 358px
+  margin: 0
   padding: 8px 20px
   font-size: $fontSize * 1.5
   border: 1px solid #aaa
   outline: none
   color: #333
+  @include smooth
+
+#search-contacts:hover
+  box-shadow: 0 1px 3px #888 inset
 
 #search-contacts:focus
   outline: none
-  box-shadow: 0 1px 1px #ccc
+  box-shadow: 0 1px 4px #aaa
 
 #search-btn
   position: absolute
@@ -123,41 +138,84 @@ ul
   position: absolute
   right: 0
 
-.contacts
+#roster
   position: relative
-  height: 400px
-  overflow: auto
-  margin: 0
-  padding: 0
+  @include smooth
+
+#contacts-frame
+  position: relative
+  width: 400px
+  height: 500px
+  white-space: no-wrap
+  overflow-y: auto
+  overflow-x: hidden
   border-top: 1px solid #eee
   @include smooth
 
+#contacts-frame.ng-hide
+  display: block !important
+  left: -400px
+
+.contacts
+  position: absolute
+  width: 400px
+  margin: 0
+  padding: 0
+  @include smooth
+
 .contacts li
-  background-color: #fdfdfd
+  background-color: #fafafa
   position: relative
   z-index: 0
   cursor: default
   padding: 6px 20px
-  white-space: nowrap
+  white-space: no-wrap
+  overflow: hidden
+  border: 1px solid transparent
+  border-left: none
+  border-right: none
   @include smooth
 
 .contacts li:hover
   background-color: #fff
+  border-color: #ddd
+  color: #000
   z-index: 50
-  top: -1px
-  box-shadow: 0 1px 2px #aaa
+  top: -2px
+  box-shadow: 0 2px 6px 1px #ddd
 
-.contact-details
-  height: 200px
-  opacity: 1
+#contact-details
+  display: inline-block
+  position: fixed
+  top: 50px
+  left: 0
+  padding: 16px
+  // color: #aaa
   @include smooth
 
-.contact-details.ng-hide
-  display: block !important
+#contact-details.ng-hide
+  display: inline-block !important
   opacity: 0
-  height: 0
-  z-index: -500
-  pointer-events: none
+  left: 400px
+
+.client-details
+  display: block
+
+.client-details:hover
+  background-color: #eee
+
+// .contact-hover
+  // position: absolute !important
+  // bottom: -10px
+  // left: 0
+  // opacity: 1.0
+  // @include smooth
+// 
+// .contact-hover.ng-hide
+  // display: block !important
+  // z-index: -500
+  // opacity: 0 !important
+  // pointer-events: none
 
 // .contact-details.ng-hide-add,
 // .contact-details.ng-hide-remove
@@ -179,7 +237,7 @@ ul
   display: none
 
 #popup
-  min-width: 357px
+  width: 400px
   height: 600px
   .footer
     text-align: right
