update popup bindings and logic for new data model

--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -255,7 +255,8 @@ ul {
   display: block;
   padding: 8px;
   margin: 2px;
-  height: 50px;
+  height: 53px;
+  width: 82%;
   border: 1px solid #eeeeee;
   font-size: 8px;
   font-family: monospace;
