--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -254,7 +254,8 @@ ul
   display: block
   padding: 8px
   margin: 2px
-  height: 50px
+  height: 53px
+  width: 82%
   border: 1px solid #eee
   font-size: $fontSize * 0.5
   font-family: monospace
