--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -198,7 +198,7 @@ ul {
   position: absolute;
   background-color: #fafafa;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   -webkit-transition: all 0.23s !important;
@@ -313,17 +313,17 @@ details > *:not(summary) {
   position: fixed;
   top: 0;
   right: 0;
-  width: 45%;
+  width: 46%;
   height: 100%;
-  paddinG: 2%;
+  padding: 2%;
+  padding-bottom: 100px;
   overflow-y: auto;
   overflow-x: hidden;
   background-color: black;
   color: #aaffff; }
   #debug pre {
-    font-size: 9.6px; }
-  #debug .btn-group {
-    margin-bottom: 10px; }
+    font-size: 9.6px;
+    margin-bottom: 100px; }
   #debug form[name=sendMsgForm] {
     margin-bottom: 3px; }
 
