--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -205,7 +205,7 @@ ul
   position: absolute
   background-color: #fafafa
   width: 100%
-  height: 100%
+  min-height: 100%
   margin: 0
   padding: 0
   @include smooth
@@ -339,17 +339,17 @@ details
   position: fixed
   top: 0
   right: 0
-  width: 45%
+  width: 46%
   height: 100%
-  paddinG: 2%
+  padding: 2%
+  padding-bottom: 100px
   overflow-y: auto
   overflow-x: hidden
   background-color: #000
   color: #aff
   pre
     font-size: $fontSize * .6
-  .btn-group
-    margin-bottom: 10px
+    margin-bottom: 100px
   form[name=sendMsgForm]
     margin-bottom: 3px
 
