--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -270,6 +270,12 @@ ul {
   top: -2px;
   box-shadow: 0 2px 6px 1px #dddddd; }
 
+.box-for-proxy {
+  display: inline-block; }
+
+.box-for-client {
+  display: inline-block; }
+
 #status {
   position: fixed;
   z-index: 50;
