--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -266,6 +266,13 @@ ul
   top: -2px
   box-shadow: 0 2px 6px 1px #ddd
 
+.box-for-proxy
+  display: inline-block
+
+.box-for-client
+  display: inline-block
+
+
 #status
   position: fixed
   z-index: 50
