scaled contact images

--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -237,7 +237,8 @@ ul {
 .contact-image {
   position: absolute;
   left: 1px;
-  top: 4px; }
+  top: 4px;
+  height: 100%; }
 
 #contact-details {
   display: inline-block;
