default contact image when imageData doesn't exist.

--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -235,11 +235,14 @@ ul
   display: block !important
   line-height: 0
 
-.contact-image
+img.contact-image
   position: absolute
   left: 1px
-  top: 4px
+  top: 1px
   height: 100%
+  min-width: 25px
+  background: transparent url('../icons/contact-default.png') no-repeat center
+  background-size: cover
 
 #contact-details
   display: inline-block
