uproxy icon for active contacts, and fix notifyinstance logic to *actually* send to only uproxy clients

--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -244,6 +244,11 @@ img.contact-image
   background: transparent url('../icons/contact-default.png') no-repeat center
   background-size: cover
 
+.contact-icons
+  position: absolute
+  right: 4px
+
+
 #contact-details
   display: inline-block
   position: fixed
