--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -196,6 +196,7 @@ ul
   box-shadow: 0 0 3px #888 inset
   color: #666
 
+// --------------------------- Roster & Contacts -------------------------------
 #roster
   position: relative
   @include smooth
@@ -252,7 +253,7 @@ img.contact-image
   left: 1px
   top: 1px
   height: 100%
-  min-width: 25px
+  width: 25px
   background: transparent url('../icons/contact-default.png') no-repeat center
   background-size: cover
 
