search filter works

--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -245,8 +245,10 @@ ul
   outline: none
 
 .contacts li.ng-hide
-  display: block !important
-  line-height: 0
+  // display: block !important
+  // pointer-events: none
+  // height: 0px
+  // padding: 0
 
 img.contact-image
   position: absolute
