--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -236,12 +236,15 @@ ul {
   position: relative;
   z-index: 0;
   cursor: default;
-  padding: 6px 30px;
+  padding: 6px 37px;
   white-space: no-wrap;
   overflow: hidden;
   border: 1px solid transparent;
   border-left: none;
   border-right: none;
+  color: #222222;
+  font-weight: 300;
+  text-shadow: 2px 2px 2px #cccccc;
   -webkit-transition: all 0.23s !important;
   -moz-transition: all 0.23s !important;
   -o-transition: all 0.23s !important;
@@ -265,9 +268,29 @@ img.contact-image {
   background: transparent url("../icons/contact-default.png") no-repeat center;
   background-size: cover; }
 
-.contact-icons {
+.c-icons {
   position: absolute;
-  right: 4px; }
+  right: 4px;
+  color: #222222;
+  font-size: 12.8px;
+  font-weight: 900; }
+
+.c-icon {
+  padding: 1px;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+
+.c-icon:hover {
+  color: #888888; }
+
+img.c-icon {
+  vertical-align: middle;
+  margin-top: -4px; }
+
+img.c-icon:hover {
+  opacity: 0.5; }
 
 #contact-details {
   display: inline-block;
