--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -227,12 +227,15 @@ ul
   position: relative
   z-index: 0
   cursor: default
-  padding: 6px 30px
+  padding: 6px 37px
   white-space: no-wrap
   overflow: hidden
   border: 1px solid transparent
   border-left: none
   border-right: none
+  color: #222
+  font-weight: 300
+  text-shadow: 2px 2px 2px #ccc
   @include smooth
 
 .contacts li:hover, .contacts li:focus
@@ -259,9 +262,24 @@ img.contact-image
   background: transparent url('../icons/contact-default.png') no-repeat center
   background-size: cover
 
-.contact-icons
+.c-icons
   position: absolute
   right: 4px
+  color: #222
+  font-size: $fontSize * 0.8
+  font-weight: 900
+
+.c-icon
+  padding: 1px
+  @include smooth
+.c-icon:hover
+  color: #888
+
+img.c-icon
+  vertical-align: middle
+  margin-top: -4px
+img.c-icon:hover
+  opacity: 0.5
 
 
 #contact-details
