--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -104,7 +104,7 @@ ul {
   position: absolute;
   margin: 0;
   padding: 6px 8px;
-  right: 20px;
+  right: 10px;
   width: 300px;
   background-color: #fcfcfc;
   font-size: 14.4px;
@@ -124,8 +124,22 @@ ul {
   opacity: 0; }
 
 #login-splash {
+  position: absolute;
   text-align: center;
-  padding-top: 30px; }
+  padding-top: 30px;
+  height: 100%;
+  bottom: 0;
+  z-index: 40;
+  background-color: white;
+  -webkit-transition: all 0.23s !important;
+  -moz-transition: all 0.23s !important;
+  -o-transition: all 0.23s !important;
+  transition: all 0.23s !important; }
+
+#login-splash.ng-hide {
+  display: block !important;
+  height: 0;
+  opacity: 0; }
 
 .network-btn {
   display: inline-block;
