--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -366,6 +366,23 @@ img.c-icon:hover
   top: -2px
   box-shadow: 0 2px 6px 1px #ddd
 
+.instance-details
+  position: relative
+  display: block
+  padding: 8px
+  margin: 2px
+  height: 53px
+  width: 82%
+  border: 1px solid #eee
+  font-size: $fontSize * 0.5
+  font-family: monospace
+  @include smooth
+
+.instance-details:hover
+  border-color: #ddd
+  top: -2px
+  box-shadow: 0 2px 6px 1px #ddd
+
 .box-for-proxy
   display: inline-block
 
@@ -392,7 +409,7 @@ img.c-icon:hover
   // left: 0
   // opacity: 1.0
   // @include smooth
-// 
+//
 // .contact-hover.ng-hide
   // display: block !important
   // z-index: -500
@@ -403,18 +420,18 @@ img.c-icon:hover
 // .contact-details.ng-hide-remove
   // @include smooth
   // display: block !important
-// 
+//
 // .contact-details.ng-hide-add.ng-hide-add-active,
 // .contact-details.ng-hide-remove
   // @include smooth
   // opacity: 0
   // height: 0
-// 
+//
 // .contact-details.ng-hide-add,
 // .contact-details.ng-hide-remove.ng-hide-remove-active
   // opacity: 1
   // height: 50px
-// 
+//
 .contact-actions
   display: none
 
