minor fix for insatnces; watch or similar is still needed

--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -383,6 +383,23 @@ img.c-icon:hover
   top: -2px
   box-shadow: 0 2px 6px 1px #ddd
 
+.network-details
+  position: relative
+  display: block
+  padding: 8px
+  margin: 2px
+  height: 53px
+  width: 82%
+  border: 1px solid #eee
+  font-size: $fontSize * 0.5
+  font-family: monospace
+  @include smooth
+
+.network-details:hover
+  border-color: #ddd
+  top: -2px
+  box-shadow: 0 2px 6px 1px #ddd
+
 .box-for-proxy
   display: inline-block
 
