--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -279,6 +279,7 @@ ul
 .contacts li
   position: relative
   z-index: 0
+  min-height: 16px
   cursor: default
   padding: 6px 37px
   white-space: no-wrap
