--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -481,12 +481,14 @@ details > *:not(summary) {
   padding: 2%;
   padding-bottom: 100px;
   overflow-y: auto;
-  overflow-x: hidden;
+  overflow-x: auto;
   background-color: black;
   color: #aaffff; }
   #debug pre {
     font-size: 9.6px;
-    margin-bottom: 100px; }
+    margin-bottom: 100px;
+    width: 100%;
+    white-space: pre-wrap; }
   #debug form[name=sendMsgForm] {
     margin-bottom: 3px; }
 
