--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -486,12 +486,14 @@ details
   padding: 2%
   padding-bottom: 100px
   overflow-y: auto
-  overflow-x: hidden
+  overflow-x: auto
   background-color: #000
   color: #aff
   pre
     font-size: $fontSize * .6
     margin-bottom: 100px
+    width: 100%
+    white-space: pre-wrap
   form[name=sendMsgForm]
     margin-bottom: 3px
 
