--- a/common/ui/styles/main.css
+++ b/common/ui/styles/main.css
@@ -127,6 +127,7 @@ ul {
   position: absolute;
   text-align: center;
   padding-top: 30px;
+  width: 100%;
   height: 100%;
   bottom: 0;
   z-index: 40;
@@ -151,6 +152,7 @@ ul {
 .uproxy-banner {
   font-size: 32px;
   font-weight: 600;
+  margin-top: 23px;
   text-shadow: 2px 2px 2px #888888;
   cursor: default; }
 
