--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -137,6 +137,7 @@ ul
   position: absolute
   text-align: center
   padding-top: 30px
+  width: 100%
   height: 100%
   bottom: 0
   z-index: 40
@@ -156,6 +157,7 @@ ul
 .uproxy-banner
   font-size: $fontSize * 2
   font-weight: 600
+  margin-top: 23px
   text-shadow: 2px 2px 2px #888
   cursor: default
 .uproxy-banner img
