--- a/common/ui/styles/main.sass
+++ b/common/ui/styles/main.sass
@@ -253,7 +253,9 @@ ul
 
 // --------------------------- Roster & Contacts -------------------------------
 #roster
-  position: relative
+  position: absolute
+  top: 64px
+  width: 100%
   @include smooth
 
 #contacts-frame
